--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  v0.2.8.tar.gz: a5db1f48ec011d2f596156972ad08206c20bb1d2
+  containerd-1.0.2.tar.gz: 125dd7699fa9e86a8b2d76f63044db55638e024d
