--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  containerd-1.3.3.tar.gz: 49d314512c34397498d068e4136aae97b0d6c664
+  containerd-1.4.0-beta.1.tar.gz: 47f050b0f70fa201492ca1322925241558bd57d5
