--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  containerd-1.4.0-beta.2.tar.gz: 5ddb5819b091796fc1d7fadfa1753044382e87a1
+  containerd-1.4.0.tar.gz: dc1a2c066c2be40faad4dcc774391c939f384b52
